--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
         build: .
         command: >
             gunicorn -b 0.0.0.0:8000
-              --access-logfile
+              --access-logfile -
               --reload
               "snakeeyes.app:create_app()"
         environment:
