--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,16 @@ werkzeug==0.14.1
 
 # Application server for both development and production.
 gunicorn==19.4.5
+
+# Testing and static analysis.
+#
+# Hello. This is Nick from the future (December 2019 to be exact). Since we
+# upgraded to Python 3.7.x, we also have to update pytest to 5.x.x since older
+# versions of it are not compatable with Python 3.7+.
+#
+# This line is different than what's on video but we do cover this update in
+# more detail in the October 2019 update video. When you run your tests you
+# may also see extra warnings and details than what's on video. Don't sweat it.
+pytest==5.1.0
+pytest-cov==2.7.1
+flake8==3.7.8
